--- a/package.json
+++ b/package.json
@@ -16,11 +16,16 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "canvas": "^1.6.12",
+    "canvas2svg": "^1.0.16",
     "ejs": "^2.5.8",
     "express": "^4.16.3",
+    "jsdom": "^12.0.0",
+    "lodash": "^4.17.11",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "autoprefixer": "^8.2.0",
@@ -29,6 +34,7 @@
     "babel-polyfill": "^6.26.0",
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "paper": "^0.11.5",
     "postcss-loader": "^2.1.3",
     "pretty": "^2.0.0",
     "style-loader": "^0.20.3",
