--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "lodash": "^4.17.11",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
+    "redux": "^4.0.1",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
